contrast errors fixed

--- a/style.css
+++ b/style.css
@@ -9,7 +9,7 @@
 .bg-garnet { background-color: #73000a; }
 /*Updated Bootstrap CSS Text Colors*/
 .text-garnet { color: #73000a; }
-.text-10-black { background-color: #ECECEC; }
+.text-10-black { background-color: #ECECEC;}
 /*Updated Bootstrap CSS Border Colors*/
 .border-garnet { border-color: #73000a !important; }
 .border-30-black{border-color: #C7C7C7 !important;}
@@ -86,14 +86,14 @@ main p {
     font-weight: 300;
 }
   
-  /* Board member headings */
+/* Board member headings */
 main h3 {
     font-size: 32px;
     font-weight: normal;
     margin: 30px 0;
 }
   
-  /* Board member layout - for the two-column layout */
+/* Board member layout - for the two-column layout */
 
 .container footer{
     font-size: 12px;
@@ -121,7 +121,7 @@ form {
   
   .required {
     font-weight: normal;
-    color:#A2A2A2;
+    color:#5C5C5C;
   }
   
   input[type="text"],
